Fix missing resources in native-image